--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -119,7 +119,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow35">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn82" padding=".5em unset">
-                        <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panelTagVendor" title="Tag Vendor" class="panel-primary">
+                        <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panelTagVendor" title="Tag Vendor" class="panel-primary" show="bind:Variables.CurrentForm.dataSet.data[$i].formTypes.vendorSelection">
                             <wm-layoutgrid name="layoutgrid12">
                                 <wm-gridrow name="gridrow38">
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn87"></wm-gridcolumn>
