--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -55,7 +55,7 @@
                             <wm-layoutgrid height="100%" name="layoutgrid4">
                                 <wm-gridrow height="100%" name="gridrow5">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" name="gridcolumn10" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-people"></wm-icon>
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-work"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn11" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Contractors / Vendors" class="p" fontsize="1.5" fontunit="em"></wm-label>
