- Fixing the previous FormService's fear of commit()ment Files modified - [FormService.java,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -92,7 +92,7 @@
                                         <wm-composite name="fieldComposite{{$index}}" required="{{formField.required}}">
                                             <label class="col-md-3 control-label app-label" name="fieldLabel{{$index}}">
                                                 {{formField.label}}
-                                                <i ng-if="!!formField.helpText && formField.helpText != ''" class="wi wi-help" title="{{formField.helpText}}"></i>
+                                                <i ng-if="!!formField.helpText &amp;&amp; formField.helpText != ''" class="wi wi-help fa-lg" title="{{formField.helpText}}"></i>
                                             </label>
                                             <wm-container class="col-md-9" name="container3">
                                                 <input ng-if="formField.formFieldTypes.label == 'Text'" class="form-control app-textbox" apply-styles="" role="input" focus-target="" title="" ng-model="Variables.svGetFormData.dataSet[formField.fieldName]" pattern=".*" accesskey="" ng-model-options="{ updateOn:'blur change', debounce: 0 ,allowInvalid: false}"
